Quick Fix - Fixed Music Player widget causing a layout shift

--- a/src/index.scss
+++ b/src/index.scss
@@ -4654,6 +4654,10 @@ input[type='checkbox'], input[type='radio']{
     left: 2px;
     right: 2px;
 }
+
+.simplebar-placeholder{
+    display: none;
+}
 //#endregion
 
 //#region Live2D widget
